# nutritional-data-analysis

./: pyproject.toml
nutritional_data/: nutritional_data.ipynb  nutritional_data_by_ingridient.csv
