[tool.poetry]
name = "nutritional-data"
version = "0.1.0"
description = ""
authors = ["Alessandro Aguilar <alessandro.aguilar.chombo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.14.0"
statsmodels = "^0.14.2"
tqdm = "^4.66.4"
ipywidgets = "^8.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
